Fixed column spacing for draggables

--- a/task-tracker-kanban/src/index.css
+++ b/task-tracker-kanban/src/index.css
@@ -23,6 +23,7 @@ body {
   border-radius: 15px;
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
   opacity: 1;
+  margin-bottom: 20px;
 }
 
 .task-card:hover {
@@ -35,6 +36,7 @@ body {
 
 .task-card.add-task {
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .task-card.add-task:hover {
@@ -48,15 +50,16 @@ body {
 
 .task-list-container {
   width: 33.33%;
-  height: 100vh;
   padding: 0 3%;
 }
 
 .task-list-container h1 {
   display: block;
   text-align: center;
+  font-size: 1.5rem;
+  padding: 0.5rem 0rem;
   color: black;
-  background-color: lightgray;
+  background-color: white;
   border: 2px solid #222222;
   border-radius: 15px;
   margin-bottom: 20px;
@@ -64,11 +67,11 @@ body {
 
 .task-list {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  gap: 20px;
+  justify-content: start;
 }
 
 .taskname-input {
